# service-oriented-vehicle-diagnostics

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  service-oriented-vehicle-diagnostics.sln
.github/: copilot-instructions.md
.github/prompts/: plan-nativeFullStack.prompt.md
DoorECU/: CMakeLists.txt  mk64f12.ld  toolchain-k64f.cmake
DoorECU/renode/: door-ecu.repl  door-ecu.resc
DoorECU/src/: diag_data.c  diag_data.h  main.c  someip.c  someip.h  startup_mk64f12.S
DoorECU/src/port/: lwipopts.h  sys_arch.c
DoorECU/src/port/arch/: cc.h  sys_arch.h
HPC/CDA/: CMakeLists.txt
HPC/CDA/src/: EcuSomeIpClient.h
HPC/SomeIpGateway/: CMakeLists.txt
HPC/SomeIpGateway/interfaces/: cda-dbus.xml
HPC/SomeIpGateway/src/: EcuSomeIpClient.cpp  EcuSomeIpClient.h  GatewayDbusService.cpp  main.cpp
HPC/SovdServer/: Program.cs  SovdServer.csproj
HPC/SovdServer/Gateway/: DbusEcuGateway.cs  IEcuGateway.cs  InMemoryEcuGateway.cs
HPC/SovdServer/Logging/: LogBroadcaster.cs
HPC/SovdServer/Models/: SovdModels.cs  SovdSerializationContext.cs
Simulator/frontend/: index.html  tailwind.config.js  vite.config.ts
Simulator/frontend/src/: App.vue  style.css
Simulator/frontend/src/components/: CapabilityBadges.vue  DoorEcuCard.vue  EcuDashboard.vue  OperationPanel.vue  SovdExplorer.vue  SovdServerPanel.vue  ZoneControllerCard.vue
Simulator/frontend/src/components/door-ecu/: DoorEcuBoard.vue
Simulator/frontend/src/components/ecm/: EcmBoard.vue  EcmVisualizer.vue
Simulator/frontend/src/composables/: useEcu.ts  useRenode.ts
Simulator/frontend/src/types/: renode.ts
Simulator/renode-bridge/: config.mjs
Simulator/renode-bridge-tmp/: config.mjs  index.mjs  package-lock.json  package.json
Simulator/renode-bridge-tmp/lib/: renode.mjs
Simulator/renode-bridge/lib/: renode.mjs  rpc.mjs
Simulator/renode-bridge/routes/: http.mjs  ws.mjs
SovdClient/: package.json  vite.config.ts
SovdClient/src/: App.vue
SovdClient/src/components/: CapabilityBadges.vue  DataPanel.vue  DoorEcuCard.vue  FaultList.vue  SomeIpGatewayPanel.vue  SovdExplorer.vue  SovdServerPanel.vue  TopologyView.vue  ZoneControllerCard.vue
SovdClient/src/components/door-ecu/: DoorEcuBoard.vue  DoorEcuVisualizer.vue
SovdClient/src/composables/: useGatewayEvents.ts
SovdServer/: Program.cs
SovdServer/Gateway/: InMemoryEcuGateway.cs
SovdServer/Logging/: BroadcastLoggerProvider.cs
ZoneController/: CMakeLists.txt
ZoneController/src/: DiagService.cpp  DiagService.h  main.cpp
ZoneController/vsomeip/: zone-controller-local.json  zone-controller.json
docker/: cda-vsomeip-renode.json  cda-vsomeip.json  cda.Dockerfile  ecm.Dockerfile  ecu-simulator.Dockerfile  frontend.Dockerfile  gateway-ecu-vsomeip.json  gateway-ecu.Dockerfile  nginx.conf  someip-gateway-local.json  someip-gateway-renode.json  someip-gateway.Dockerfile  someip-gateway.json  sovd-server.Dockerfile  zone-controller.Dockerfile
frontend/: package-lock.json
frontend/src/: style.css
frontend/src/components/: OperationPanel.vue
frontend/src/components/ecm/: EcmBoard.vue  EcmVisualizer.vue
frontend/src/composables/: useRenode.ts
frontend/src/types/: sovd.ts
renode/: door-ecu.repl  ecm.repl  ecm.resc
scripts/: build_doorecu.sh
src/CDA/src/: EcuSomeIpClient.h  GatewayDbusService.h  main.cpp
src/ECM/: CMakeLists.txt
src/ECM/firmware/: CMakeLists.txt
src/ECM/firmware/src/: diag_data.c  diag_data.h  main.c  someip.c
src/ECM/firmware/src/port/: ethernetif.c  sys_arch.c
src/ECM/src/: DiagService.h  main.cpp
src/ECM/vsomeip/: ecu-sim.json
src/EcuSimulator/: CMakeLists.txt
src/EcuSimulator/src/: DiagService.cpp  DiagService.h  main.cpp
src/EcuSimulator/vsomeip/: ecu-sim.json
src/GatewayECU/: CMakeLists.txt
src/GatewayECU/interfaces/: gateway-ecu.xml
src/GatewayECU/src/: EcuSomeIpClient.h  GatewayDbusService.cpp  GatewayDbusService.h  main.cpp
src/SovdServer/Gateway/: DbusEcuGateway.cs
src/SovdServer/Models/: SovdModels.cs  SovdSerializationContext.cs
src/frontend/src/: App.vue
src/frontend/src/components/: EcuDashboard.vue  FaultList.vue
src/frontend/src/types/: renode.ts
src/renode-bridge/: config.mjs
src/renode-bridge/lib/: broadcast.mjs  renode.mjs  rpc.mjs
src/renode-bridge/routes/: http.mjs  ws.mjs
